--- a/css/style.css
+++ b/css/style.css
@@ -26,11 +26,16 @@ body { font-family: OpenSans; background-color: #ffffff; color: #2e154f; }
 /* Presentacion
 ========================================================================== */
 
-.presentacion { width: 100%; height: 500px; display: table; } 
+.presentacion { width: 100%; height: 550px; display: table; } 
 .presentacion { vertical-align: middle; background-color: #62329f; } 
 
 .presentacion-h1 { color: #ffffff; font-size: 80px; } 
 .presentacion-h2 { color: #ffffff; font-size: 30px; } 
+
+.presentacion-logo { display: block; width: 180px; height: 180px; } 
+.presentacion-logo { background-size: 180px 180px; } 
+.presentacion-logo { background-image: url('../img/logo_white.png'); } 
+.presentacion-logo { background-repeat: no-repeat; } 
 
 .presentacion-btn { display: block; width: 350px; height: 70px; } 
 .presentacion-btn { border: 1px; border-color: #ffffff; border-style: solid; } 
