--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,9 @@ body { font-family: OpenSans; background-color: #ffffff; color: #2e154f; }
 .pre { width: 100%; height: 600px; display: table; } 
 .pre { vertical-align: middle; background-color: #62329f; } 
 
+/* Fondo */
+.pre { background: url("../img/bg.jpg") no-repeat; background-size: cover; } 
+
 .pre-h1 { color: #ffffff; font-size: 60px; text-decoration: none; } 
 .pre-h2 { color: #ffffff; font-size: 24px; text-decoration: none; } 
 
