--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ body { font-family: OpenSans; background-color: #ffffff; color: #2e154f; }
 
 /* Headers */
 .pre-h1 { color: #ffffff; font-size: 60px; text-decoration: none; } 
-.pre-h2 { color: #ffffff; font-size: 24px; text-decoration: none; } 
+.pre-h2 { color: #ffffff; font-size: 24px; text-decoration: none; font-weight: 300; } 
 
 .pre-logo { display: block; width: 100px; height: 100px; } 
 .pre-logo { background-size: 100px 100px; } 
@@ -46,7 +46,7 @@ body { font-family: OpenSans; background-color: #ffffff; color: #2e154f; }
 .pre-logo { background-repeat: no-repeat; } 
 
 .pre-btn { display: block; width: 250px; height: 50px; } 
-.pre-btn { border: 1px; border-color: #ffffff; border-style: solid; } 
+.pre-btn { border: 2px solid #ffffff; border-radius: 5px; } 
 .pre-btn { font-size: 20px; line-height: 47px; text-align: center; } 
 .pre-btn { text-decoration: none; } 
 .pre-btn { color: #ffffff; background-color: transparent; } 
